style stuff and color changes

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
   var currentBirdSightings=[]; //all current birds
   var currentFilters=[]; //list of current filters, as objects containing all necessary parameters
   var birdsOnMap=[];
+  var currentStartDate=new Date(0,0,0,0,0,0);
+  var currentEndDate=new Date();;
   var username = "";
   var autocompleteNumber = 0;
   var mapService;
@@ -283,8 +285,10 @@
               currentBirdSightings=Filter.or(currentBirdSightings,
                                              Filter.bySpecies(birdSightings,currentFilters[i].replace('-',' ')));
           }
+          var tempBirdSightingsWithDate=Filter.or(currentBirdSightings,
+                                             Filter.byDate(birdSightings,currentStartDate,currentEndDate));
           clearMarkers();
-          Display.displayBirdSightings(currentBirdSightings);
+          Display.displayBirdSightings(tempBirdSightingsWithDate);
       }
 
       //removes element when user presses the x
@@ -302,23 +306,25 @@
    //TIME FILTER
       $('#time-select').on('change',function(e){
           //pretend "today" is 2/28/2014 (last date we have data for)
-          var startDate=new Date(2014,2,1,0,0,0);
-          var endDate=new Date(2014,2,1,0,0,0);
+          currentStartDate=new Date(2014,2,1,0,0,0);
+          currentEndDate=new Date(2014,2,1,0,0,0);
           var interval=$(e.currentTarget).val();
           if (interval=="today"){
-              startDate.setDate(startDate.getDate()-1);
+              currentStartDate.setDate(currentStartDate.getDate()-1);
           }else if (interval=="week"){
-              startDate.setDate(startDate.getDate()-7);
+              currentStartDate.setDate(currentStartDate.getDate()-7);
           }else if (interval=="month"){
-              startDate.setDate(startDate.getDate()-30);
+              currentStartDate.setDate(currentStartDate.getDate()-30);
           }else { //show all
-              startDate=new Date(0,0,0,0,0,0);
-              endDate=new Date();
+              currentStartDate=new Date(0,0,0,0,0,0);
+              currentEndDate=new Date();
           }
+          console.log(currentStartDate, currentEndDate);
               clearMarkers();
-              currentBirdSightings=Filter.or(currentBirdSightings,
-                                             Filter.byDate(birdSightings,startDate,endDate));
-          Display.displayBirdSightings(currentBirdSightings);
+          console.log(currentBirdSightings);
+              var tempBirdSightingsWithDate=Filter.or(currentBirdSightings,
+                                             Filter.byDate(birdSightings,currentStartDate,currentEndDate));
+          Display.displayBirdSightings(tempBirdSightingsWithDate);
       });
 
       //BIRD FILTER
@@ -334,7 +340,9 @@
               clearMarkers();
               currentBirdSightings=Filter.or(currentBirdSightings,
                                              Filter.bySpecies(birdSightings,currentBird));
-              Display.displayBirdSightings(currentBirdSightings);
+              var tempBirdSightingsWithDate=Filter.or(currentBirdSightings,
+                                             Filter.byDate(birdSightings,currentStartDate,currentEndDate));
+          Display.displayBirdSightings(tempBirdSightingsWithDate);
               var list=$(e.currentTarget.parentElement.parentElement.parentElement);
               if (list.attr('id')!='filters' && $('#filter-list #filters #'+currentID).length==0){
                   addBirdsToFilterDisplay(currentBird);
@@ -545,7 +553,7 @@
 
           var image;
           if ($("#bird-pic-url").val()==""){
-            image='images/northern_cardinal_stephen_a_wolfe.jpg'
+            image='images/northern_cardinal_stephen_a_wolfe.jpg';
           }
           else{
             image=newSighting.image;
