--- a/index.html
+++ b/index.html
@@ -698,9 +698,9 @@
     <!-- header -->
     <div class="row" id="filter-options">
           <div class="col-md-5">
-            <big><big><big>
+            <big><big><big><big><big>
               <a href="index.html"><span class="big birdocular-logo">bird<img src="images/icon_9766.png" width='20'>cular</span>
-              </a>
+              </a></big></big>
                 &nbsp;
               <span id="username">Welcome.</span>&nbsp;
               <a id="login-logout" rel="#login-form">Sign in</a>
