--- a/index.html
+++ b/index.html
@@ -191,6 +191,8 @@
             }
             autocompleteNumber = 2;
             document.getElementById('input_bar').value = autocompleteItems[autocompleteSelection];
+            $('.autocomplete-removable').attr('id','');
+            $('.autocomplete-removable.'+nameToID(autocompleteItems[autocompleteSelection])+'-container').attr('id','autocomplete-focus');
         } else if ( event.keyCode == 40 ) { //DOWN ARROW
             if (autocompleteNumber == 2) {
                 if (autocompleteSelection < autocompleteItems.length - 1) {
@@ -201,6 +203,8 @@
             }
             autocompleteNumber = 2;
             document.getElementById('input_bar').value = autocompleteItems[autocompleteSelection];
+            $('.autocomplete-removable').attr('id','');
+            $('.autocomplete-removable.'+nameToID(autocompleteItems[autocompleteSelection])+'-container').attr('id','autocomplete-focus');
         } else if (event.keyCode > 47 && event.keyCode < 91) {
             autocompleteSelection = 0;
         $( ".autocomplete-removable" ).remove();
@@ -336,8 +340,8 @@
               currentBirdSightings=Filter.or(currentBirdSightings,
                                              Filter.bySpecies(birdSightings,currentFilters[i].replace('-',' ')));
           }
-          var tempBirdSightingsWithDate=Filter.or(currentBirdSightings,
-                                             Filter.byDate(birdSightings,currentStartDate,currentEndDate));
+              var tempBirdSightingsWithDate=Filter.byDate(currentBirdSightings,
+                                                         currentStartDate,currentEndDate);
           clearMarkers();
           Display.displayBirdSightings(tempBirdSightingsWithDate);
       }
@@ -372,9 +376,13 @@
           }
           console.log(currentStartDate, currentEndDate);
               clearMarkers();
-          console.log(currentBirdSightings);
-              var tempBirdSightingsWithDate=Filter.or(currentBirdSightings,
-                                             Filter.byDate(birdSightings,currentStartDate,currentEndDate));
+          if (currentBirdSightings.length<1){
+              var tempBirdSightingsWithDate=Filter.byDate(birdSightings,
+                                                         currentStartDate,currentEndDate);
+          }else{
+              var tempBirdSightingsWithDate=Filter.byDate(currentBirdSightings,
+                                                         currentStartDate,currentEndDate);
+          }
           Display.displayBirdSightings(tempBirdSightingsWithDate);
       });
 
@@ -391,9 +399,10 @@
               clearMarkers();
               currentBirdSightings=Filter.or(currentBirdSightings,
                                              Filter.bySpecies(birdSightings,currentBird));
-              var tempBirdSightingsWithDate=Filter.or(currentBirdSightings,
-                                             Filter.byDate(birdSightings,currentStartDate,currentEndDate));
-          Display.displayBirdSightings(tempBirdSightingsWithDate);
+              var tempBirdSightingsWithDate=Filter.byDate(currentBirdSightings,
+                                                         currentStartDate,currentEndDate);
+            Display.displayBirdSightings(tempBirdSightingsWithDate);
+              //Display.displayBirdSightings(currentBirdSightings);
               var list=$(e.currentTarget.parentElement.parentElement.parentElement);
               if (list.attr('id')!='filters' && $('#filter-list #filters #'+currentID).length==0){
                   addBirdsToFilterDisplay(currentBird);
