--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
             document.getElementById('input_bar').value = autocompleteItems[autocompleteSelection];
             $('.autocomplete-removable').attr('id','');
             $('.autocomplete-removable.'+nameToID(autocompleteItems[autocompleteSelection])+'-container').attr('id','autocomplete-focus');
+            $('#autocomplete-answers').scrollTop(34.5 * autocompleteSelection);
         } else if ( event.keyCode == 40 ) { //DOWN ARROW
             if (autocompleteNumber == 2) {
                 if (autocompleteSelection < autocompleteItems.length - 1) {
@@ -205,6 +206,7 @@
             document.getElementById('input_bar').value = autocompleteItems[autocompleteSelection];
             $('.autocomplete-removable').attr('id','');
             $('.autocomplete-removable.'+nameToID(autocompleteItems[autocompleteSelection])+'-container').attr('id','autocomplete-focus');
+            $('#autocomplete-answers').scrollTop(34.5 * autocompleteSelection);
         } else if (event.keyCode > 47 && event.keyCode < 91) {
             autocompleteSelection = 0;
         $( ".autocomplete-removable" ).remove();
@@ -757,9 +759,9 @@
     <!-- header -->
     <div class="row" id="filter-options">
           <div class="col-md-5">
-            <big><big><big><big><big>
+            <big><big><big><big><big><big>
               <a href="index.html"><span class="big birdocular-logo">bird<img src="images/icon_9766.png" width='20'>cular</span>
-              </a></big></big>
+              </a></big></big></big>
                 &nbsp;
               <span id="username">Welcome.</span>&nbsp;
               <a id="login-logout" rel="#login-form">Sign in</a>
