--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
 
           var image;
           if ($("#bird-pic-url").val()==""){
-            image='images/northern_cardinal_stephen_a_wolfe.jpg'
+            image='images/generic_bird.png'
           }
           else{
             image=newSighting.image;
